# paperless-ngx

./: .hadolint.yml  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Pipfile  build-docker-image.sh  pyproject.toml
.github/: dependabot.yml
.github/scripts/: get-build-json.py
.github/workflows/: ci.yml  installer-library.yml
docs/: configuration.rst  extending.rst  setup.rst
src-ui/src/: styles.scss  theme.scss
src-ui/src/app/components/app-frame/: app-frame.component.html  app-frame.component.ts
src-ui/src/app/components/manage/settings/: settings.component.html  settings.component.ts
src-ui/src/app/services/: settings.service.ts
src/documents/tests/: test_barcodes.py
src/paperless/: settings.py
src/paperless_tesseract/: parsers.py
src/paperless_tesseract/tests/: test_parser.py
